<resources>
    <string name="app_name">OneNote2025</string>
    <string name="login">Login</string>
    <string name="signed_in">Signed-In</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="show_location">Show location</string>
    <string name="saved">Saved</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_message">Do you really want to delete this note?</string>
    <string name="upload">Upload Photo</string>
    <string name="location">You can see the location here :)</string>
    <string name="grade">My Grade :o</string>
    <string name="selectgrade">Please select the rating for this Project</string>
    <string-array name="grades">
        <item>1 - Perfect</item>
        <item>2 - Very Good</item>
        <item>3 - Okayish</item>
        <item>4 - Barely enough</item>
        <item>5 - Not good enough :(</item>
    </string-array>
</resources>