<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        app:titleTextColor="@color/white"/>

    <EditText
        android:id="@+id/noteEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/noteEditMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/message"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/noteImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/margin_medium"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"/>


    <Button
        android:id="@+id/buttonImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/upload"
        style="@style/Button"/>

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/show_location"
        style="@style/Button"/>

    <EditText
        android:id="@+id/noteShowLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/location"/>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/save"
        style="@style/Button"/>

</LinearLayout>